# qrcode

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  main.cpp  qrcode.hpp  run.bat  test.cpp
